--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,22 +1,22 @@
-.main {
+.leftContainer{
+  width: 40vw;
+  height: 100vh;
+  overflow: hidden;
+  background-image: url("../public/background.jpeg");
+  background-size: 1300px;
+}
+
+.body {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  padding: 4rem 0;
+  background-Color: #152238;
+  color: white;
 }
 
-.title {
-  line-height: 1.15;
-  font-size: 4rem;
+.rightContainer {
+
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover, .title a:focus, .title a:active {
-  text-decoration: underline;
+.buttonSignUp{
+  background-color: blue;
+  
 }
