--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: Helvetica Neue, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 * {
