--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,7 +17,7 @@
 
 .body {
   display: flex;
-  background-Color: #152238;
+  background-Color: #0a141c;
   color: white;
 }
 
@@ -40,6 +40,39 @@
   background-color: #1DA1F2;
 }
 
-.modal {
+.registerSection{
+  display: flex;
+  flex-direction: column;
+  height: 400px;
+  padding: 20px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.input {
+  padding: 10px;
+  width: 50%;
+  height: 40px;
+  background-color: transparent;
+  color: white;
+  border: 1px solid grey;
+  border-radius: 5px;
+}
+
+.inputButton {
   
+}
+
+.modals {
+  position: absolute;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10vh;
+  display: flex;
+  left: 0;
+  right: 0;
+  text-align: center;
+  width: 500px;
+  background-color: #142937;
 }
