--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,8 +11,19 @@
   background-size: 1300px;
 }
 
+.logoTwitter {
+  height: 30px;
+  margin-top: 20px;
+}
+
+.logoTwitterInput {
+  height: 40px;
+  width: 45px;
+  margin-top: 20px;
+}
+
 .rightContainer {
-  margin-left: 15px;
+  margin-left: 25px;
 }
 
 .body {
@@ -25,6 +36,8 @@
   font-weight: 700;
   letter-spacing: -1px;
   font-size: 50px;
+  margin-top: 70px;
+  margin-bottom:50px;
 }
 
 .h2 {
@@ -43,15 +56,15 @@
 /* MODALE */
 .registerSection{
   display: flex;
-  height: 100%;
+  height: 70%;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
 }
 
 .registerContainer {
-  height: 400px;
-  padding: 20px;
+  height: 450px;
+  padding: 10px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -93,4 +106,5 @@
   text-align: center;
   width: 500px;
   background-color: #142937;
+  border-radius: 10px;
 }
